--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "express-session": "^1.16.2", 
     "mongoose": "^5.6.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+
+"ejs": ">=3.1.7"
+
+
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
